# sphinx-inline-tabs

./: pyproject.toml
