[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name        = "sphinx_inline_tabs"
license     = {text="MIT"}
readme      = "README.md"
authors     = [{name = "Pradyun Gedam", email = "mail@pradyunsg.me"}]
classifiers = [
  "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8"
dependencies    = ["sphinx>=3"]
dynamic = ["version", "description"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "pytest-xdist",
]
doc = ["myst-parser", "furo"]

[project.urls]
Homepage = "https://github.com/pradyunsg/sphinx-inline-tabs"
Documentation = "https://sphinx-inline-tabs.readthedocs.io"

[tool.flit.sdist]
include = ["LICENSE"]
